tests/error/modifier_errors/flag_call.err
Error: Dagger constraint violation (at $FILE:11:4)
   | 
 9 | @guppy(daggerable=True)
10 | def test(x: qubit) -> None:
11 |     foo(x)
   |     ^^^^^^ This function cannot be called in a daggerable context

Help: Consider adding the flag `(daggerable=True)` to the decorator of the
function `foo`

Guppy compilation failed due to 1 previous error
